--- a/src/layouts/Books.astro
+++ b/src/layouts/Books.astro
@@ -43,12 +43,12 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 				margin: 0 0 0.5em 0;
 			}
 
-			/* List formatting fixes */
+			/* List formatting: vertical list with bullets */
 			.prose ul {
-				padding: 0;
-				margin: 0;
-				display: block;        /* vertical list */
-				list-style: none;      /* remove bullets (re-add if desired) */
+				padding-left: 1.25em;
+				margin: 0 0 1em 0;
+				display: block;
+				list-style: disc;
 			}
 			.prose li {
 				margin-bottom: 0.5em;
@@ -56,6 +56,12 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 				text-align: left;
 				width: 100%;
 				line-height: 1.4;
+			}
+
+			/* Year markers */
+			.year {
+				font-weight: 700;
+				margin: 0.75em 0 0.25em;
 			}
 		</style>
 	</head>
@@ -70,10 +76,22 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<hr />
 					</div>
 
+					<p class="year">2025</p>
 					<ul>
+						<li><em>Lonesome Dove</em> — Larry McMurtry (July 2025)</li>
+						<li><em>Jax Trax</em> — Jack Olive (May 2025)</li>
+						<li><em>On Booze</em> — F. Scott Fitzgerald (May 2025)</li>
+						<li><em>Sula</em> — Toni Morrison (May 2025)</li>
+						<li><em>The Moral Basis of Democracy</em> — Eleanor Roosevelt (April 2025)</li>
+						<li><em>Man's Search for Meaning</em> — Viktor E. Frankl (March 2025)</li>
+						<li><em>The Diamond Age</em> — Neal Stephenson (March 2025)</li>
 						<li><em>Sovietistan</em> — Erika Fatland (February 2025)</li>
 						<li><em>The Tower</em> — Kelly Cordes (January 2025)</li>
 						<li><em>The Creation of the American Republic, 1776-1787</em> — Gordon S. Wood (January 2025)</li>
+					</ul>
+
+					<p class="year">2024</p>
+					<ul>
 						<li><em>Founding Brothers</em> — Joseph J. Ellis (November 2024)</li>
 						<li><em>Sometimes a Great Notion</em> — Ken Kesey (August 2024)</li>
 						<li><em>Arbitrary Lines: How Zoning Broke the American City and How to Fix It</em> — M. Nolan Gray (June 2024)</li>
@@ -84,6 +102,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>Star Maker</em> — Olaf Stapledon (March 2024)</li>
 						<li><em>The Doors of the Sea: Where Was God in the Tsunami</em> — David Bentley Hart (January 2024)</li>
 						<li><em>The Disappearance of God</em> — Richard Elliott Friedman (January 2024)</li>
+					</ul>
+
+					<p class="year">2023</p>
+					<ul>
 						<li><em>Beloved</em> — Toni Morrison (December 2023)</li>
 						<li><em>Just for Fun: The Story of an Accidental Revolutionary</em> — Linus Torvalds (November 2023)</li>
 						<li><em>House of Light</em> — Mary Oliver (November 2023)</li>
@@ -96,6 +118,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>Who Wrote the Bible?</em> — Richard Elliott Friedman (March 2023)</li>
 						<li><em>VALIS</em> — Philip K. Dick (February 2023)</li>
 						<li><em>Europe Central</em> — William T. Vollmann (February 2023)</li>
+					</ul>
+
+					<p class="year">2022</p>
+					<ul>
 						<li><em>Peacemaking among Primates</em> — Frans de Waal (November 2022)</li>
 						<li><em>Everything Flows</em> — Vasily Grossman (October 2022)</li>
 						<li><em>The Right Stuff</em> — Tom Wolfe (August 2022)</li>
@@ -105,6 +131,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>Mother Night</em> — Kurt Vonnegut Jr. (March 2022)</li>
 						<li><em>The Curve of Binding Energy</em> — John McPhee (January 2022)</li>
 						<li><em>Childhood's End</em> — Arthur C. Clarke (January 2022)</li>
+					</ul>
+
+					<p class="year">2021</p>
+					<ul>
 						<li><em>Player Piano</em> — Kurt Vonnegut Jr. (August 2021)</li>
 						<li><em>A Scanner Darkly</em> — Philip K. Dick (June 2021)</li>
 						<li><em>The Three Stigmata of Palmer Eldritch</em> — Philip K. Dick (May 2021)</li>
@@ -116,6 +146,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>The Sirens of Titan</em> — Kurt Vonnegut Jr. (January 2021)</li>
 						<li><em>A Billion Voices: China’s Search for a Common Language</em> — David Moser (January 2021)</li>
 						<li><em>Zero K</em> — Don DeLillo (January 2021)</li>
+					</ul>
+
+					<p class="year">2020</p>
+					<ul>
 						<li><em>Coup d'État: A Practical Handbook</em> — Edward N. Luttwak (December 2020)</li>
 						<li><em>Cat's Cradle</em> — Kurt Vonnegut Jr. (December 2020)</li>
 						<li><em>Snow Crash</em> — Neal Stephenson (November 2020)</li>
@@ -124,6 +158,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>All the Shah's Men: An American Coup and the Roots of Middle East Terror</em> — Stephen Kinzer (March 2020)</li>
 						<li><em>Becoming Mrs. Lewis</em> — Patti Callahan (March 2020)</li>
 						<li><em>Last and First Men</em> — Olaf Stapledon (January 2020)</li>
+					</ul>
+
+					<p class="year">2019</p>
+					<ul>
 						<li><em>God Bless You, Dr. Kevorkian</em> — Kurt Vonnegut Jr. (December 2019)</li>
 						<li><em>Warts and All</em> — Drew Friedman; Josh Alan Friedman (December 2019)</li>
 						<li><em>Black Cracker</em> — Josh Alan Friedman (November 2019)</li>
@@ -142,6 +180,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>The Image: A Guide to Pseudo-Events in America</em> — Daniel J. Boorstin (January 2019)</li>
 						<li><em>Annals of the Former World</em> — John McPhee (January 2019)</li>
 						<li><em>My Century</em> — Günter Grass (January 2019)</li>
+					</ul>
+
+					<p class="year">2018</p>
+					<ul>
 						<li><em>The Origin of Consciousness in the Breakdown of the Bicameral Mind</em> — Julian Jaynes (December 2018)</li>
 						<li><em>Cat's Cradle</em> — Kurt Vonnegut Jr. (October 2018)</li>
 						<li><em>Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed</em> — James C. Scott (October 2018)</li>
@@ -165,8 +207,10 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>A Farewell to Arms</em> — Ernest Hemingway (February 2018)</li>
 						<li><em>Maus I: A Survivor's Tale: My Father Bleeds History</em> — Art Spiegelman (February 2018)</li>
 						<li><em>The Pale King</em> — David Foster Wallace (January 2018)</li>
+					</ul>
 
-						<!-- Undated (rated on Goodreads but no BoB date) at bottom -->
+					<!-- Undated (rated on Goodreads but no BoB date) at bottom -->
+					<ul>
 						<li><em>1984</em> — George Orwell</li>
 						<li><em>Antifragile: Things That Gain from Disorder</em> — Nassim Nicholas Taleb</li>
 						<li><em>Big Sur</em> — Jack Kerouac</li>
@@ -179,12 +223,9 @@ const { title = "Books", description = "Blake Maczka's personal website" } = Ast
 						<li><em>Foundation (Foundation, #1)</em> — Isaac Asimov</li>
 						<li><em>Gödel, Escher, Bach: An Eternal Golden Braid</em> — Douglas R. Hofstadter</li>
 						<li><em>Ham on Rye</em> — Charles Bukowski</li>
-						<li><em>On Booze</em> — F. Scott Fitzgerald</li>
 						<li><em>Infinite Jest</em> — David Foster Wallace</li>
 						<li><em>Into Thin Air: A Personal Account of the Mt. Everest Disaster</em> — Jon Krakauer</li>
 						<li><em>Jurassic Park (Jurassic Park, #1)</em> — Michael Crichton</li>
-						<li><em>Lonesome Dove</em> — Larry McMurtry</li>
-						<li><em>Man's Search for Meaning</em> — Viktor E. Frankl</li>
 						<li><em>Mother Night</em> — Kurt Vonnegut Jr.</li>
 						<li><em>Neuromancer</em> — William Gibson</li>
 						<li><em>Nineteen Eighty-Four</em> — George Orwell</li>
