--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Books.astro';
 	pubDate={new Date()}
 	heroImage={AboutHeroImage}
 >
-    <h1 class="books-title" style="text-align: center; width: 100%;">Books I've Read</h1>
+    <h1 class="books-title" style="text-align: center; width: 100%;">Things I've Read</h1>
   
     <ul>
       <li>Life and Fate — Vasily Grossman</li>
